# project-sienna

./: .gitignore  README.md
cpps/: .gitignore  CMakeLists.txt  CMakePresets.json
cpps/include/: RootManager.h  constants.h  math_util.h  render_util.h  test.h
cpps/include/Component/: BrushComponent.h  CameraComponent.h  CleanMarkComponent.h  CleanerComponent.h  ClientEventComponent.h  ClientInputComponent.h  DirtMapComponent.h  EventComponent.h  GameStateComponent.h  GeometryComponent.h  GrFramebufferComponent.h  GrFramedTextureComponent.h  GrGeometryComponent.h  GrMaterialComponent.h  GrPingPongTextureComponent.h  GrShaderComponent.h  GrShaderManagerComponent.h  GrTextureComponent.h  GrUniformComponent.h  InputComponent.h  MaterialComponent.h  RenderConfigComponent.h  TransformComponent.h
cpps/include/Entity/: BrushEntity.h  CameraEntity.h  ClientInputEntity.h  ConfigEntity.h  GameEntity.h  GrGlobalEntity.h  PaintableEntity.h  PaintablePartEntity.h  PlayerEntity.h  WashableEntity.h  WashablePartEntity.h
cpps/include/System/: CalculateSystem.h  CleanSystem.h  ClientSyncSystem.h  FeedbackSystem.h  GrSyncSystem.h  ManageSystem.h  RenderSystem.h  TransformSystem.h
cpps/include/View/: GrModelGeometriesView.h  PaintedTexturesView.h  RenderItemsView.h  TransformUpdatingView.h
cpps/include/shader/: block.h  core.h  source.h  sources.h  util.h  utils.h
cpps/include/system/: calculate_system.h  clean_system.h  client_sync_system.h  feedback_system.h  gr_sync_system.h  input_sync_system.h  manage_system.h  paint_system.h  render_system.h  transform_system.h
cpps/src/: RootManager.cpp  main.cpp  render_util.cpp
cpps/src/Entity/: PaintableEntity.cpp  (+3 more)
(+62 files in other folders)
